--- a/upload/catalog/view/stylesheet/stylesheet.css
+++ b/upload/catalog/view/stylesheet/stylesheet.css
@@ -428,6 +428,14 @@ footer h5 {
 .blog-thumb .description {
   padding: 15px;
 }
+.comment {
+  background-color: #ececec;
+  padding: 10px;
+  border-radius: 10px;
+}
+.checked {
+  color: orange;
+}
 /* Theme Custom CSS */
 #cookie {
   position: fixed;
