--- a/upload/catalog/view/stylesheet/stylesheet.scss
+++ b/upload/catalog/view/stylesheet/stylesheet.scss
@@ -520,6 +520,16 @@ footer h5 {
   padding: 15px;
 }
 
+.comment {
+  background-color: #ececec;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.checked {
+  color: orange;
+}
+
 /* Theme Custom CSS */
 #cookie {
   position: fixed;
