--- a/upload/admin/view/template/cms/article_list.twig
+++ b/upload/admin/view/template/cms/article_list.twig
@@ -7,7 +7,9 @@
           <th><a href="{{ sort_name }}"{% if sort == 'ad.name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
           <th><a href="{{ sort_author }}"{% if sort == 'a.author' %} class="{{ order|lower }}"{% endif %}>{{ column_author }}</a></th>
           <th class="text-end"><a href="{{ sort_rating }}"{% if sort == 'a.rating' %} class="{{ order|lower }}"{% endif %}>{{ column_rating }}</a></th>
+		  <th class="text-end">{{ column_likes }}</th>
           <th class="text-end"><a href="{{ sort_date_added }}"{% if sort == 'a.date_added' %} class="{{ order|lower }}"{% endif %}>{{ column_date_added }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 'a.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
@@ -19,13 +21,20 @@
               <td>{{ article.name }}</td>
               <td>{{ article.author }}</td>
               <td class="text-end">{{ article.rating }}</td>
+			  <td class="text-end">{{ article.likes }}</td>
               <td class="text-end">{{ article.date_added }}</td>
+              <td class="text-center">
+                <div class="form-switch form-switch-md">
+                  <input type="hidden" name="status" value="0"/>
+                  <input type="checkbox" name="status" value="{% if not article.status %}{{ article.enable }}{% else %}{{ article.disable }}{% endif %}" id="input-status" class="form-check-input text-center"{% if article.status %} checked{% endif %}/>
+                </div>
+              </td>
               <td class="text-end text-nowrap text-decoration-none"><a href="{{ article.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not article.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="6">{{ text_no_results }}</td>
+            <td class="text-center" colspan="8">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
