--- a/upload/admin/view/template/cms/topic_list.twig
+++ b/upload/admin/view/template/cms/topic_list.twig
@@ -5,7 +5,8 @@
         <tr>
           <th class="text-center" style="width: 1px;"><input type="checkbox" onclick="$('input[name*=\'selected\']').prop('checked', $(this).prop('checked'));" class="form-check-input"/></th>
           <th><a href="{{ sort_name }}"{% if sort == 'name' %} class="{{ order|lower }}"{% endif %}>{{ column_name }}</a></th>
-          <th class="text-end"><a href="{{ sort_sort_order }}"{% if sort == 'sort_order' %} class="{{ order|lower }}"{% endif %}>{{ column_sort_order }}</a></th>
+          <th class="text-end"><a href="{{ sort_sort_order }}"{% if sort == 't.sort_order' %} class="{{ order|lower }}"{% endif %}>{{ column_sort_order }}</a></th>
+          <th class="text-center"><a href="{{ sort_status }}"{% if sort == 't.status' %} class="{{ order|lower }}"{% endif %}>{{ column_status }}</a></th>
           <th class="text-end">{{ column_action }}</th>
         </tr>
       </thead>
@@ -16,12 +17,18 @@
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ topic.topic_id }}" class="form-check-input"/></td>
               <td>{{ topic.name }}</td>
               <td class="text-end">{{ topic.sort_order }}</td>
+              <td class="text-center">
+                <div class="form-switch form-switch-md">
+                  <input type="hidden" name="status" value="0"/>
+                  <input type="checkbox" name="status" value="{% if not topic.status %}{{ topic.enable }}{% else %}{{ topic.disable }}{% endif %}" id="input-status" class="form-check-input text-center"{% if topic.status %} checked{% endif %}/>
+                </div>
+              </td>
               <td class="text-end text-nowrap text-decoration-none"><a href="{{ topic.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="{% if not topic.status %}btn btn-secondary{% else %}btn btn-primary{% endif %}"><i class="fa-solid fa-pencil"></i></a></td>
             </tr>
           {% endfor %}
         {% else %}
           <tr>
-            <td class="text-center" colspan="4">{{ text_no_results }}</td>
+            <td class="text-center" colspan="5">{{ text_no_results }}</td>
           </tr>
         {% endif %}
       </tbody>
