--- a/upload/admin/view/template/customer/customer_form.twig
+++ b/upload/admin/view/template/customer/customer_form.twig
@@ -87,6 +87,13 @@
                   </div>
                 </div>
                 <div class="row mb-3">
+                  <label for="input-author" class="col-sm-2 col-form-label">{{ entry_author }}</label>
+                  <div class="col-sm-10">
+                    <input type="text" name="author" value="{{ author }}" placeholder="{{ entry_author }}" id="input-author" class="form-control"/>
+                    <div id="error-author" class="invalid-feedback"></div>
+                  </div>
+                </div>
+                <div class="row mb-3">
                   <label for="input-telephone" class="col-sm-2 col-form-label">{{ entry_telephone }}</label>
                   <div class="col-sm-10">
                     <input type="text" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control"{% if config_telephone_required %} required{% endif %}/>
@@ -217,14 +224,14 @@
                 <div class="row mb-3">
                   <label for="input-password" class="col-sm-2 col-form-label">{{ entry_password }}</label>
                   <div class="col-sm-10">
-                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" required autocomplete="new-password"/>
+                    <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" autocomplete="new-password"/>
                     <div id="error-password" class="invalid-feedback"></div>
                   </div>
                 </div>
                 <div class="row mb-3">
                   <label for="input-confirm" class="col-sm-2 col-form-label">{{ entry_confirm }}</label>
                   <div class="col-sm-10">
-                    <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control" required autocomplete="new-password"/>
+                    <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control"/>
                     <div id="error-confirm" class="invalid-feedback"></div>
                   </div>
                 </div>
