--- a/upload/catalog/view/template/account/edit.twig
+++ b/upload/catalog/view/template/account/edit.twig
@@ -32,6 +32,14 @@
               <div id="error-email" class="invalid-feedback"></div>
             </div>
           </div>
+          <div class="row mb-3">
+            <label for="input-author" class="col-sm-2 col-form-label">{{ entry_author }}</label>
+            <div class="col-sm-10">
+              <input type="text" name="author" value="{{ author }}" placeholder="{{ entry_author }}" id="input-author" class="form-control"/>
+			  <small id="author-help" class="form-text text-muted">{{ text_author_help }}</small>
+              <div id="error-author" class="invalid-feedback"></div>
+            </div>
+          </div>
 
           {% if config_telephone_display %}
             <div class="row mb-3">
